# phrase-match

./: README.md  pyproject.toml  quoted.txt  summary.txt
phrase_match/: __main__.py  phrase_match.py
