[tool.poetry]
name = "phrase-match"
version = "0.0.0"
description = ""
authors = ["Matt Neary <neary.matt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipdb = "^0.13.13"
numpy = "^1.26.2"
pymupdf = "^1.23.6"
html2text = "^2020.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
